--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,50 +3,50 @@
     <string name="openDrawer">open_drawer</string>
     <string name="closeDrawer">close_drawer</string>
 
-    <string name="Toast_double_tap">Press again to close PSLab</string>
-    <string name="Toast_magnetic_not_present">"The sensor required for this instrument is not present in your device"</string>
+    <string name="Toast_double_tap">PSLab ని మూసివేయడానికి మళ్ళీ నొక్కండి </string>
+    <string name="Toast_magnetic_not_present">"ఈ పరికరానికి అవసరమైన సెన్సార్ మీ పరికరంలో లేదు "</string>
 
-    <string name="nav_device">Connect Device</string>
-    <string name="nav_instruments">Instruments</string>
-    <string name="nav_settings">Settings</string>
-    <string name="nav_about_us">About Us</string>
-    <string name="nav_buy_pslab">Buy PSLab</string>
-    <string name="nav_report">Feedback &amp; Bugs</string>
-    <string name="nav_help_feedback">FAQ</string>
-    <string name="nav_share">Share App</string>
-    <string name="nav_config">Generate Config File</string>
-    <string name="pslab_pinlayout">Pin Layout</string>
-    <string name="pslab_pinlayout_front">Pin Layout Front</string>
-    <string name="pslab_pinlayout_back">Pin Layout Back</string>
-    <string name="bluetooth_connect_menu">Bluetooth Connection</string>
-    <string name="bluetooth_wifi_connect_option">Connect using Bluetooth or Wi-Fi</string>
-    <string name="bluetooth">Bluetooth</string>
-    <string name="wifi">WiFi</string>
-    <string name="bluetooth_scan_text">Scan</string>
-    <string name="bluetooth_stop_text">Stop</string>
-    <string name="scanned_devices_list_title">Scanned Devices</string>
-    <string name="bluetooth_not_supported">Your phone does not support bluetooth</string>
-    <string name="incorrect_IP_address_message">Please enter valid IP address</string>
-    <string name="enter_IP_hint">Enter IP address of ESP module</string>
-    <string name="esp_connect_text">Connect</string>
+    <string name="nav_device">పరికరాన్ని కనెక్ట్ చేయండి </string>
+    <string name="nav_instruments">ఇన్స్ట్రుమెంట్స్ </string>
+    <string name="nav_settings">సెట్టింగులు </string>
+    <string name="nav_about_us">మా గురించి </string>
+    <string name="nav_buy_pslab">PSLab కొనండి</string>
+    <string name="nav_report">అభిప్రాయం & amp; బగ్స్ </string>
+    <string name="nav_help_feedback">ఎఫ్ ఎ క్యూ</string>
+    <string name="nav_share">అనువర్తనాన్ని భాగస్వామ్యం చేయండి </string>
+    <string name="nav_config">కాన్ఫిగర్ ఫైల్‌ను రూపొందించండి</string>
+    <string name="pslab_pinlayout">పిన్ లేఅవుట్ </string>
+    <string name="pslab_pinlayout_front">పిన్ లేఅవుట్ ముందు </string>
+    <string name="pslab_pinlayout_back">పిన్ లేఅవుట్ తిరిగి </string>
+    <string name="bluetooth_connect_menu">బ్లూటూత్ కనెక్షన్ </string>
+    <string name="bluetooth_wifi_connect_option">బ్లూటూత్ లేదా వై-ఫై ఉపయోగించి కనెక్ట్ అవ్వండి</string>
+    <string name="bluetooth">బ్లూటూత్</string>
+    <string name="wifi">వై-ఫై</string>
+    <string name="bluetooth_scan_text">స్కాన్</string>
+    <string name="bluetooth_stop_text">ఆపు</string>
+    <string name="scanned_devices_list_title">స్కాన్ చేసిన పరికరాలు</string>
+    <string name="bluetooth_not_supported">మీ బ్లూటూత్‌కు మద్దతు ఇవ్వదు</string>
+    <string name="incorrect_IP_address_message">దయచేసి చెల్లుబాటు అయ్యే IP చిరునామాను నమోదు చేయండి</string>
+    <string name="enter_IP_hint">ESP మాడ్యూల్ యొక్క IP చిరునామాను నమోదు చేయండి</string>
+    <string name="esp_connect_text">కనెక్ట్</string>
 
-    <string name="oscilloscope">Oscilloscope</string>
-    <string name="multimeter">Multimeter</string>
-    <string name="logical_analyzer">Logic Analyzer</string>
-    <string name="wave_generator">Wave Generator</string>
-    <string name="sensors">Sensors</string>
-    <string name="power_source">Power Source</string>
-    <string name="record_title">Record current data</string>
+    <string name="oscilloscope">ఒస్సిల్లోస్కోప్</string>
+    <string name="multimeter">మల్టిమీటర్</string>
+    <string name="logical_analyzer">లాజిక్ ఎనలైజర్</string>
+    <string name="wave_generator">వేవ్ జనరేటర్</string>
+    <string name="sensors">సెన్సార్స్</string>
+    <string name="power_source">శక్తి వనరులు</string>
+    <string name="record_title">ప్రస్తుత డేటాను రికార్డ్ చేయండి </string>
 
-    <string name="setting_auto_start_key">setting_auto_start</string>
-    <string name="setting_auto_start_summary">Auto start app when PSLab device is connected</string>
-    <string name="settting_auto_start_title">Auto Start</string>
-    <string name="setting_data_format_key">export_data_format_list</string>
-    <string name="setting_data_format_title">Export Data Format</string>
+    <string name="setting_auto_start_key">ఆటో_ప్రారంభాన్ని_సెట్ చేస్తుంది</string>
+    <string name="setting_auto_start_summary">PSLab పరికరం కనెక్ట్ అయినప్పుడు ఆటో ప్రారంభ అనువర్తనం</string>
+    <string name="settting_auto_start_title">ఆటో ప్రారంభం</string>
+    <string name="setting_data_format_key">డేటా_ఫార్మాట్జా_బితాను_ఎగుమతి చేయండి</string>
+    <string name="setting_data_format_title">ఎగుమతి డేటా ఆకృతి</string>
 
-    <string name="control_item_1">Control</string>
-    <string name="control_item_2">Read</string>
-    <string name="control_item_3">Advanced</string>
+    <string name="control_item_1">నియంత్రణ</string>
+    <string name="control_item_2">చదవండి</string>
+    <string name="control_item_3">ఆధునిక</string>
 
     <string name="about_us_description">The goal of PSLab is to create an Open Source hardware device (open on all layers) that can be used for experiments by teachers, students and citizen scientists. Our tiny pocket lab provides an array of sensors for doing science and engineering experiments. It provides functions of numerous measurement devices including an oscilloscope, a waveform generator, a frequency counter, a programmable voltage, current source and as a data logger.</string>
 
